# APF-Paper-8-Admissibility-Capacity-Ledger

./: APF_Reviewer_Walkthrough.ipynb  MANIFEST.custom  Paper_8_Admissibility_Capacity_Ledger_Supplement_v2.5.tex  Paper_8_Admissibility_Capacity_Ledger_v2.9.tex  README.md  REVIEWERS_GUIDE.md  SETUP.md  START_HERE.md  derivation_graph.json  interactive_dag.html  pyproject.toml  quick_demo.py  run_checks.py  setup.py  verify_all.py  zenodo.json
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  FRAMEWORK_OVERVIEW.md  GLOSSARY.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  OPEN_PROBLEMS.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  repo_map.json  theorems.json
apf/: __init__.py  bank.py  core.py  cosmology.py  crystal.py  crystal_axiom_roots.py  crystal_metrics.py  crystal_snapshot_v6.9.json  crystal_snapshot_v6.9_pre-Phase14f.json  extensions.py  formal_kernel.py  fractional_reading.py  gauge.py  generations.py  gravity.py  horizon_joint_bridge.py  i4_composition.py  internalization.py  internalization_geo.py  killed_rivals.py  lambda_absolute.py  lambda_operator_derivation.py  majorana.py  numeric_fallback.py  phase_14d3_completions.py  plec.py  quantum_operator_derivation.py  red_team.py  session_cosmo_update.py  session_delta_pmns.py  session_nnlo.py  session_phase2_confrontation.py  session_qg.py  session_v63c.py  spacetime.py  subspace_functors.py  supplements.py  test_no_smuggling.py  thermal_absolute.py  unification.py  (+3 more)
minimal_working_example/: README.md  WHY_THIS_MATTERS.md  toy_interface_expected_output.txt  (+1 more)
(+31 files in other folders)
